# rac

./: .gitlab-ci.yml  Cargo.toml  Dockerfile-ci  README.md  build.rs  client-aktualizr.toml  client.toml  embedded-rac-key.sec  rust-toolchain
.cargo/: config
.github/workflows/: ci-image.yaml  ci.yaml
ci/: build-client.sh
docker/client/: README.md  client-compose.yml  client-docker.toml  client.Dockerfile  entrypoint.sh  rac-docker-compose.yml
src/: authorized_keys.rs  command.rs  data_type.rs  dbus.rs  device_keys.rs  embedded_server.rs  event_loop.rs  lib.rs  local_session.rs  main.rs  ras_client.rs  session_handler.rs  spawned_sshd.rs  ssh.rs  torizon.rs
tests/: integration_tests.rs
tests/data/: remote-sessions-86.json  remote-sessions-key.pub  remote-sessions-key.sec  remote-sessions.json  root-keys.json  root-offline-updates-only.json  root-offline-updates.json  root-rsa.json  unsigned
