[package]
name = "rac"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls-manual-roots", "hyper-rustls"] }
russh = { git = "https://github.com/warp-tech/russh.git", tag = "0.37.0-beta.1" }
russh-keys = { git = "https://github.com/warp-tech/russh.git", tag = "0.37.0-beta.1" }
serde = { version = "1.0.152", features = ["std", "derive"] }
ssh-key = { version = "0.5.1", features = ["serde", "ed25519"] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io-util"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
color-eyre = { version = "0.6", default-features = false }
url = { version = "2.3.1", features = ["serde"] }
chrono = "0.4.23"
portable-pty = "0.8.0"
socket2 = "0.4.7"
eyre = "0.6.8"
nix = { version = "0.26.2", features = ["user"], default-features = false }

[build-dependencies]
vergen = "7.5.1"

[dev-dependencies]
axum = "0.6.7"
http = "0.2.9"
pretty_assertions = "1"
serde_json = "1.0.93"
tempfile = "3.4.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
