[package]
name = "rac"
version = "0.1.0"
edition = "2021"
build = "build.rs"
homepage = "https://github.com/toradex/torizon-rac"
description = "Remote access client for Torizon"
repository = "git://github.com/toradex/torizon-rac.git"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls-manual-roots", "hyper-rustls"] }
russh = "0.42.0"
russh-keys = "0.42.0"
serde = { version = "1.0.152", features = ["std", "derive"] }
ssh-key = { version = "0.5.1", features = ["serde", "ed25519"] }
tokio = { version = "1.38.0", features = ["sync", "rt"] }
tokio-util = { version = "0.7.7", features = ["io-util"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
color-eyre = { version = "0.6", default-features = false }
url = { version = "2.3.1", features = ["serde"] }
chrono = "0.4.23"
portable-pty = "0.8.0"
socket2 = "0.5.6"
eyre = "0.6.8"
futures = { version = "0.3.27", default-features = false, features = ["std", "alloc"] }
nix = { version = "0.26.2", default-features = false, features = ["user", "fs"] }
tough = { git = "https://github.com/toradex/tough", branch = "rac", features = ["http", "reqwest"] }
base64 = "0.21.2"
serde_json = "1.0.93"
bytes = "1.4.0"
zbus = "4.3.1"
tokio-stream = "0.1.15"

[build-dependencies]
vergen = "7.5.1"

[dev-dependencies]
console = "0.15.5"
axum = "0.6.7"
http = "0.2.9"
pretty_assertions = "1"
serde_json = "1.0.93"
tempfile = "3.4.0"
reqwest = { version = "0.11.13", default-features = false, features = ["blocking"] }
tokio-retry = "0.3.0"
ring = { version = "0.17", features = ["std"] }
olpc-cjson = "0.1.3"
